# slack-thread-expander

./: Cargo.toml  LICENSE  README.md  app_manifest.yml
.github/workflows/: ci.yml
src/: main.rs
testdata/: broadcasted_threaded_file_upload.json  broadcasted_threaded_message.json  broadcasted_threaded_message_changed.json  plain_message.json  threaded_file_upload.json  threaded_message.json  threaded_message_changed.json
